Adicionando Autenticação com token JWT